Bug 105814 - File Services dialog has hardcoded "host" and "port" keywords in sample addresses for several protocols/services
Summary: File Services dialog has hardcoded "host" and "port" keywords in sample addre...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-07 00:08 UTC by Martin Srebotnjak
Modified: 2017-02-08 11:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Srebotnjak 2017-02-07 00:08:40 UTC
Description:
Remote files dialog has hardcoded sample host address for protocols, like 
for Alfresco 4/5 it offers:
http://<host:port>/alfresco/cmisatom
instead of localized keywords host and port, like for Slovenian:
http://<gostitelj:vrata>/alfresco/cmisatom
Same goes for both Sharepoint presets, Nuxeo, IBM, Lotus ...


Steps to Reproduce:
1. Open localized LibreOffice and a new Writer file
2. Select File - Save Remote File
3. When Remote Files dialog opens, click the Add Service button, then select service type Alfresco 4/5 or any other mentioned service

Actual Results:  
host (and somewhere port) keywords are in English, not localizable

Expected Results:
"host" and "port" should be localizable


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:51.0) Gecko/20100101 Firefox/51.0
Comment 1 Jean-Baptiste Faure 2017-02-07 05:57:58 UTC
Reproducible with 
Version: 5.3.1.0.0+
Build ID: aa09fd58bd499a2a2c3a32c5f613892bad54076c
Threads CPU : 4; Version de l'OS :Linux 4.4; UI Render : par défaut; VCL : gtk3; Moteur de mise en page : nouveau; 
Ubuntu_16.04_x86-64
Locale : fr-FR (fr_FR.UTF-8); Calc: group

Best regards. JBF
Comment 2 Andras Timar 2017-02-08 10:14:11 UTC
https://gerrit.libreoffice.org/34021
Comment 3 Commit Notification 2017-02-08 11:34:49 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=21864fed063c1888323e14977fc73061d4905b80

tdf#105814 enable localization of "host" and "port" in sample addresses

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.