tdf#105814 enable localization of "host" and "port" in sample addresses

Change-Id: I2e58f4757bd86393410cdc6fd77205a8ebb9b917